# CircuitAI

./: CMakeLists.txt  README.md  run.sh
data/: AIInfo.lua
data/config/: build_chain.json
src/circuit/: CircuitAI.cpp
src/circuit/module/: BuilderManager.cpp  EconomyManager.cpp  FactoryManager.cpp  FactoryManager.h  MilitaryManager.cpp  MilitaryManager.h
src/circuit/resource/: EnergyGrid.cpp  MetalData.h
src/circuit/setup/: DefenceMatrix.cpp  SetupData.cpp  SetupManager.cpp
src/circuit/task/: UnitTask.h
src/circuit/task/builder/: BuilderTask.cpp  FactoryTask.cpp  MexTask.cpp  NanoTask.cpp  PylonTask.cpp
src/circuit/task/common/: RepairTask.cpp
src/circuit/task/fighter/: AntiAirTask.cpp  ArtilleryTask.cpp  AttackTask.cpp  BombTask.cpp  DefendTask.cpp  MeleeTask.cpp  RaidTask.cpp  RallyTask.cpp  ScoutTask.cpp
src/circuit/terrain/: TerrainData.cpp  TerrainManager.cpp  ThreatMap.cpp
src/circuit/unit/: AllyTeam.cpp  CircuitDef.cpp  FactoryData.cpp
src/circuit/util/: DebugDrawer.cpp  DebugDrawer.h  GameTask.cpp  GameTask.h  MultiQueue.h  MultiQueue.hpp  Scheduler.cpp  Scheduler.h  mutex.h  regex.h  thread.h  utils.h
test/: except_test.py
